feat(terraform): Initialize GitLab Runner for ADAS Project
feat(terraform): Initialize GitLab Runner for ADAS Project

- Created an initialization script for setting up the GitLab Runner.
- Added necessary variables to the `variables.tf` and `terraform.tfvars.example` files for the GitLab Runner setup.

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,3 +1,6 @@
-hcloud_token = "your_hcloud_token"
-access_key = "access_key"
-secret_key = "secret_key"
+hcloud_token                     = "your_hcloud_token"
+access_key                       = "access_key"
+secret_key                       = "secret_key"
+ssh_public_key                   = "ssh_public_key"
+gitlab_runner_registration_token = "gitlab_runner_registration_token"
+gitlab_url                       = "gitlab_url"
