--- a/cloud-init.yml
+++ b/cloud-init.yml
@@ -11,4 +11,4 @@ runcmd:
   - useradd --comment 'GitLab Runner' --create-home gitlab-runner --shell /bin/bash
   - gitlab-runner install --user=gitlab-runner --working-directory=/home/gitlab-runner
   - gitlab-runner start
-  - gitlab-runner register --non-interactive --url ${gitlab_url} --registration-token ${gitlab_runner_registration_token} --executor shell --description "My Runner" --tag-list "shell" --run-untagged --locked=false
+  - gitlab-runner register --non-interactive --url ${gitlab_url} --registration-token ${gitlab_runner_registration_token} --executor docker --description "Hetzner runner" --tag-list "shell" --run-untagged --locked=false --docker-image "docker:20.10.7" --docker-volumes "/var/run/docker.sock:/var/run/docker.sock" --docker-privileged
