--- a/cloud-init.yml
+++ b/cloud-init.yml
@@ -5,9 +5,11 @@ packages:
   - curl
   - gitlab-runner
   - docker.io
-
+  - awscli
 runcmd:
   - systemctl start docker && systemctl enable docker
+  - docker run --rm -it gitlab/gitlab-runner-helper:x86_64-6d9dd510
+  - docker tag  gitlab/gitlab-runner-helper:x86_64-6d9dd510 gitlab-runner-helper:11.2.0
   - usermod -aG docker gitlab-runner
   - curl -L --output /usr/local/bin/gitlab-runner https://gitlab-runner-downloads.s3.amazonaws.com/latest/binaries/gitlab-runner-linux-amd64 && chmod +x /usr/local/bin/gitlab-runner
   - useradd --comment 'GitLab Runner' --create-home gitlab-runner --shell /bin/bash
