fix tf vars example

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -2,5 +2,8 @@ hcloud_token                     = "your_hcloud_token"
 access_key                       = "access_key"
 secret_key                       = "secret_key"
 ssh_public_key                   = "ssh_public_key"
+ssh_private_key                  = "ssh_private_key"
 gitlab_runner_registration_token = "gitlab_runner_registration_token"
 gitlab_url                       = "gitlab_url"
+gitlab_pat                       = "gitlab_pat"
+aws_account_id                   = "aws_account_id"
